src/styles/styles.css
/* TODO: script that flags unused classes */
:root {
  --bg-color: #f9f9f9;
  --text-main: #222;
  --text-muted: #777;
  --accent-color: #2c3e50;
  /* Dark Slate Blue */
  --accent-hover: #1a252f;
  --card-bg: #fff;
  --border-color: #eaeaea;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  background-color: var(--bg-color);
  color: var(--text-main);
  line-height: 1.6;
  display: grid;
  /* navbar */
  grid-template-rows: 56px 1fr;
  min-height: 100vh;
  margin: 0;
}

h1 {
  font-size: 3rem;
  font-weight: 800;
  letter-spacing: -0.02em;
  margin-bottom: 0.5rem;
  color: var(--accent-color);
}

.flex {
  display: flex;
}

.flex-row {
  flex-direction: row;
}

.jc-space-around {
  justify-content: space-around;
}

.bold {
  font-weight: bold;
}


/***** START navbar *********/
.navbar {
  position: sticky;
  z-index: 100;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background: white;
}

.navbar-container {
  max-width: 1200px;
  display: flex;
  align-items: center;
  padding: 1rem 2rem;
  box-sizing: border-box;
}

.navbar-links {
  display: flex;
  gap: 2rem;
  list-style: none;
}

.navbar a {
  color: inherit;
  text-decoration: none;
  position: relative;
}

.navbar {
  /*box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);*/
  border-bottom: solid;
  border-width: 2px;
}


/****** START: Project page **********/

/* TODO: doesn't look good on mobile */
.project-page {
  width: min(900px, 60vw);
  /* ~20% margins on each side when wide */
  margin: 0 auto;
}

